# knowledgegraph_rag

./: .env.example  .gitignore  README.md  browser-body.txt  constraints-ci.txt  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: __init__.py
backend/app/: __init__.py  analysis.py  contracts.py  demo.py  domain.py  evaluation.py  main.py  model_config.py  providers.py  query_language.py  repositories.py  stores.py
backend/app/adapters/: __init__.py  in_memory.py  neo4j.py  qdrant.py
backend/app/chunking/: __init__.py  code.py  fallback.py  optional_parser.py  problem_statement.py  router.py  search_text.py  structured_problem.py
backend/app/ingestion/: __init__.py  __main__.py  pipeline.py
backend/app/retrieval/: __init__.py  documents.py  pipeline.py  runtime.py
data/raw/: programming_problems.json
docs/: 2026-06-26-retrieval-bug-audit.md  Knowledge Graph + Hybrid RAG 重構計畫.md  api.md  architecture.md  data-contract.md  evaluation.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
scripts/: README.md  quick-start.ps1
tests/backend/: test_analysis.py  test_api.py  test_chunking_pipeline.py  test_contracts_and_providers.py  test_demo.py  test_evaluation.py  test_frontend_contracts.py  test_ingestion_pipeline.py  test_llm.py  test_online_retrieval_pipeline.py  test_processed_problem_loader.py  test_quick_start_dev_server_wiring.py  test_retrieval.py  test_runtime_retrieval.py  test_store_adapters.py  test_store_runtime_integration.py
(+5 files in other folders)
