[project]
name = "knowledgegraph-rag"
version = "0.1.0"
description = "Explainable programming-problem GraphRAG assistant"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "neo4j>=5.28.0",
  "qdrant-client>=1.15.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "docker: requires local Docker services and seeded stores",
]

[tool.ruff]
line-length = 100
target-version = "py311"
